# BRE_DigitalRegulationNavigator_Alpha

./: .cfignore  .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierignore  .secrets.baseline  Dockerfile  LICENSE  Procfile  README.md  browsersync.config.js  docker-compose.yml  fabfile.py  manage.py  manifest.yml  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  stellar.yaml  webpack.config.js
.github/workflows/: ci.yml
dockerfiles/: Dockerfile.frontend  Dockerfile.utils
docs/: index.md
docs/alpha/: authentication-with-magic-links.md  erd.md
docs/alpha/proof-of-concepts/: regulation-er-notes.md  regulator-er-notes.md  sic-notes.md
docs/developer-guide/: anonymised-data.md  continuous-integration.md  data-protection.md  deployment.md  project-conventions.md
docs/developer-guide/front-end/: tooling.md
drnalpha/: urls.py  wsgi.py
drnalpha/companies/: admin.py  client.py  forms.py  models.py  urls.py  views.py
drnalpha/finder/: decorators.py  forms.py  urls.py  views.py
drnalpha/forms/: models.py
drnalpha/home/: models.py
drnalpha/project_styleguide/: apps.py
drnalpha/regulations/: admin.py  models.py  wagtail_hooks.py
drnalpha/search/: views.py
drnalpha/settings/: base.py  local.py.example
drnalpha/sic_codes/: __init__.py  admin.py  apps.py  models.py  wagtail_hooks.py
drnalpha/standardpages/: models.py
drnalpha/static_src/javascript/: main.js
drnalpha/tracker/: __init__.py  admin.py  apps.py  decorators.py  forms.py  models.py  signals.py  urls.py  views.py  wagtail_hooks.py
drnalpha/users/: __init__.py  apps.py  forms.py  models.py  views.py
drnalpha/utils/: context_processors.py  models.py  notify.py
(+172 files in other folders)
