[tool.poetry]
name = "drn-alpha"
version = "0.1.0"
description = "BEIS DRN Alpha"
authors = ["Torchbox <hello@torchbox.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "~3.1"
wagtail = "~2.12"
psycopg2 = "~2.8"
gunicorn = {version = "~20.0", optional = true}
wagtail-django-recaptcha = "1.0"
django-pattern-library = "~0.3"
whitenoise = "~5.0"
dj-database-url = "~0.5"
raven = "~6.10"
django-redis = "~4.11"
django-storages = { version ="~1.9", extras = ["boto3"] }
django-referrer-policy = "~1.0"
django-csp = "~3.6"
scout-apm = "~2.10"
django-basic-auth-ip-whitelist = "~0.3.3"
wagtail-accessibility = "~0.2"
wagtail-storages = "~0.0.4"
wagtail-autocomplete = "^0.6"
django-sesame = "^2.3"
notifications-python-client = "^6.0.2"
django-crispy-forms = "^1.11.1"
django-formtools = "^2.2"

[tool.poetry.extras]
gunicorn = ["gunicorn"]

[tool.poetry.dev-dependencies]
Werkzeug = "~0.16"
django-extensions = "~2.2"
fabric = "~2.5"
stellar = "~0.4"

# Linters etc.
black = "20.8b1"
detect-secrets = "~0.13"
flake8 = "3.8.3"
isort = "5.3.0"
pre-commit = "~2.0"
seed-isort-config = "1.9.4"

# Documentation
mkdocs = "~1.1"
mkdocs-material = "~6.2"
pymdown-extensions = "~8.1"

[build-system]
requires = ["poetry>=1,<2"]
build-backend = "poetry.masonry.api"

[tool.black]
line_length = 88
target-version = ['py38']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | \.venv
    | __pycache__
    | _build
    | build
    | dist
    | docs
    | venv
    | node_modules
    | migrations\/*
  )/
)
'''
